# football_analytics_system

./: .gitattributes  .gitignore  README.md  football_analytics_phd_project.md  pyproject.toml
docs/: DECISIONS.md  NEXT_PHASE_PROMPT.md  ONE_SHOT_PRODUCT_PROMPT.md  SPEC.md
src/fas/: __init__.py  cli.py  entities.py
src/fas/boolean/: __init__.py  formation_lattice.py  pattern_recognition.py
src/fas/data/: __init__.py  schema.py  schema.sql  statsbomb.py  unify_ids.py
src/fas/evaluation/: __init__.py  metrics.py
src/fas/examples/: __init__.py  synthetic_pipeline.py
src/fas/foundations/: __init__.py  coherence.py  context_ops.py  performance_functional.py  point_process.py
src/fas/graph/: __init__.py  centrality.py  gat_model.py  min_cut_pressing.py  pass_network.py
src/fas/headtohead/: __init__.py  copula_outcomes.py  hawkes_momentum.py  matchup_tensor.py  network_ranking.py  paired_comparison.py
src/fas/inference/: __init__.py  causality.py  insight_engine.py  kernel_mmd.py  ot_style.py  rmt_clean.py  tda_shape.py
src/fas/milp/: __init__.py  player_valuation.py  robust_milp.py  squad_selection.py  substitution_milp.py
src/fas/network_flow/: __init__.py  defensive_suppression.py  max_flow_buildup.py  xt_surface.py
src/fas/nlp/: __init__.py  epv_unet.py  pass_value_nlp.py  set_piece_opt.py  trajectory_opt.py
src/fas/performance/: __init__.py  bayesian_skill.py  form_state.py  irt.py  pitch_control.py  possession_mdp.py  rapm.py  roles_nmf.py  style_manifold.py  team_scoring.py
src/fas/product/: __init__.py  artifacts.py  build.py  centralisation.py  clustering.py  formation.py  ingest.py  loader.py  synthetic.py
src/fas/ui/: __init__.py  app.py  charts.py  report.py  theme.py
src/fas/valuation/: __init__.py  cross_league_normalization.py  development_curves.py  scouting_report.py
tests/: conftest.py  test_boolean.py  test_foundations_v3.py  test_graph.py  test_headtohead_v3.py  test_inference_v3.py  test_milp.py  test_network_flow.py  test_performance_v3.py  test_pipeline.py  test_product.py
